Update VM specs.

--- a/docker-host/Vagrantfile
+++ b/docker-host/Vagrantfile
@@ -16,7 +16,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.provider :virtualbox do |vb|
     vb.name = "docker-host1"
-    vb.customize ["modifyvm", :id, "--memory", 1024]
+    vb.customize ["modifyvm", :id, "--memory", 4096]
+    vb.customize ["modifyvm", :id, "--cpus", 4]
   end
 
   config.vm.provision :shell, :inline => $script
