--- a/docker-host/Vagrantfile
+++ b/docker-host/Vagrantfile
@@ -3,32 +3,97 @@
 
 VAGRANTFILE_API_VERSION = "2"
 
-DOCKER_URL = "192.168.33.99"
-DOCKER_PORT = 5422
+DOCKER_IP     = ENV.fetch("DOCKER_IP", "192.168.42.43")
+DOCKER_PORT   = ENV.fetch("DOCKER_PORT", "4243")
+DOCKER_MEMORY = ENV.fetch("DOCKER_MEMORY", "2048")
+DOCKER_ARGS   = ENV.fetch("DOCKER_ARGS", "")
+
+if DOCKER_ARGS.empty? && DOCKER_PORT != "4243"
+  DOCKER_ARGS = "-H unix:// -H tcp://0.0.0.0:#{DOCKER_PORT}"
+end
 
 $script = <<SCRIPT
-  yum -y --nogpgcheck install dstat telnet
-  echo 'alias dstat="sudo dstat -tlcdnmgy --top-cpu --top-io --top-bio --top-mem"' >> /home/vagrant/.bashrc
-  sed -i -e 's/other_args=/other_args=\"-H 0.0.0.0:#{DOCKER_PORT}\"/g' /etc/sysconfig/docker
-  service docker stop
-  service docker start
+  INITD=/usr/local/etc/init.d/docker
+
+  if [ -n '#{DOCKER_ARGS}' ] && grep -q 'docker -d .* $EXPOSE_ALL' $INITD >/dev/null; then
+    echo "---> Configuring docker with args '#{DOCKER_ARGS}' and restarting"
+    sudo sed -i -e 's|docker -d .* $EXPOSE_ALL|docker -d #{DOCKER_ARGS}|' $INITD
+    sudo $INITD restart
+  fi
+
+  if ! grep -q '8\.8\.8\.8' /etc/resolv.conf >/dev/null; then
+    echo "nameserver 8.8.8.8" >> /etc/resolv.conf
+  fi
 SCRIPT
 
+module VagrantPlugins
+  module GuestTcl
+    module Cap ; end
+
+    class Plugin < Vagrant.plugin("2")
+      name "Core Linux guest"
+      description "Core Linux guest support"
+
+      guest("tcl", "linux") do
+        class ::VagrantPlugins::GuestTcl::Guest < Vagrant.plugin("2", :guest)
+          def detect?(machine)
+            machine.communicate.test("cat /etc/issue | grep 'Core Linux'")
+          end
+        end
+        Guest
+      end
+
+      guest_capability("tcl", "halt") do
+        class ::VagrantPlugins::GuestTcl::Cap::Halt
+          def self.halt(machine)
+            machine.communicate.sudo("poweroff")
+          rescue IOError
+            # Do nothing, because it probably means the machine shut down
+            # and SSH connection was lost.
+          end
+        end
+        Cap::Halt
+      end
+
+      guest_capability("tcl", "configure_networks") do
+        class ::VagrantPlugins::GuestTcl::Cap::ConfigureNetworks
+          def self.configure_networks(machine, networks)
+            require 'ipaddr'
+            machine.communicate.tap do |comm|
+              networks.each do |n|
+                ifc = "/sbin/ifconfig eth#{n[:interface]}"
+                broadcast = (IPAddr.new(n[:ip]) | (~ IPAddr.new(n[:netmask]))).to_s
+                comm.sudo("#{ifc} down")
+                comm.sudo("#{ifc} #{n[:ip]} netmask #{n[:netmask]} broadcast #{broadcast}")
+                comm.sudo("#{ifc} up")
+              end
+            end
+          end
+        end
+        Cap::ConfigureNetworks
+      end
+    end
+  end
+end
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box = "opscode-centos65"
-  config.vm.box_url = "http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.5_chef-provisionerless.box"
+  config.vm.box = "boot2docker-0.4.0"
+  config.vm.box_url = "https://github.com/mitchellh/boot2docker-vagrant-box/releases/download/v0.4.0/boot2docker.box"
 
-  config.vm.provider :virtualbox do |vb|
-    vb.name = "docker-host1"
-    vb.customize ["modifyvm", :id, "--memory", 3072]
-    vb.customize ["modifyvm", :id, "--cpus", 4]
-  end
+  config.ssh.shell = "sh -l"
+  config.ssh.username = "docker"
 
-  config.vm.network :private_network, ip: DOCKER_URL
+  # Disable synced folders because guest additions aren't available
+  config.vbguest.auto_update = false
+  config.vm.synced_folder ".", "/vagrant", disabled: true
 
-  config.vm.provision :docker do |d|
-    d.pull_images "centos:6.4"
+  config.vm.network "private_network", :ip => DOCKER_IP
+
+  config.vm.provider :virtualbox do |v|
+    v.name = "docker1"
+    v.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
+    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    v.customize ["modifyvm", :id, "--memory", Integer(DOCKER_MEMORY)]
   end
 
   config.vm.provision :shell, :inline => $script
