--- a/aws-newrelic-test/Vagrantfile
+++ b/aws-newrelic-test/Vagrantfile
@@ -12,14 +12,22 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box       = "dummy"
   config.vm.box_url   = "https://github.com/mitchellh/vagrant-aws/raw/master/dummy.box"
 
-  config.vm.define :aws_newrelic_test do |node|
+  config.vm.define "aws-newrelic-test" do |node|
     configure_node(node) do |aws, override|
-      aws.ami                    = "ami-87206d86"
+      aws.ami                    = "ami-29dc9228"  # Amazon Linux AMI 2014.03.2 (HVM)
       aws.instance_type          = "t2.micro"
       aws.tags = {
         "Name" => "aws-newrelic-test",
         "Description" => "New Relic Test",
       }
+    end
+
+    node.vm.provision "ansible" do |ansible|
+      ansible.playbook = "provisioning/site.yml"
+      ansible.extra_vars = {
+        newrelic_license_key: ENV['NEWRELIC_LICENSE_KEY']
+      }
+      ansible.verbose = "v"
     end
   end
 
